--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,16 +23,16 @@ dependencies:
   cloud_firestore: ^0.13.7
   animator: ^2.0.1
   image_picker: ^0.6.7+4
-  google_sign_in: ^4.5.1
+  google_sign_in: ^4.0.1+1
   timeago: ^2.0.26
-  cached_network_image: ^2.1.0
+  cached_network_image:
   firebase_auth: ^0.16.1
   geolocator: ^5.3.2+2
   uuid: ^2.2.0
   path_provider: ^1.6.11
   firebase_messaging: ^6.0.16
   firebase_storage: ^3.1.6
-  image: ^2.1.0
+  image: ^2.0.7
   flutter_icons: ^1.0.0+1
   flutter_svg: ^0.17.4
   media_picker: ^1.3.5
